# AutoScape

./: .env.local.example  .gitignore  AutoScape-trace.bat  AutoScape.bat  RUN.md  package-lock.json  package.json  pnpm-lock.yaml
backend/: alembic.ini  pyproject.toml
backend/app/: bootstrap.py  database.py  main.py  models.py  port_probe.py  schemas.py  theme_loader.py  thumbnails.py  zzz_test_target.py
backend/app/api/: settings.py
backend/app/domain/: __init__.py  build_sheet_validation.py  retailers.py  url_validator.py
backend/app/providers/: __init__.py  base.py  claude_sonnet.py  exceptions.py  gemini_flash.py  gemini_pro.py  gpt5.py  gpt_image.py  image_prompt.py  image_provider.py  materials_llm.py  search_grounding.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_build_sheet_project_dimensions.py
backend/scripts/: probe_image_providers.py  probe_materials_llms.py
backend/tests/: test_approved_retailers_api.py  test_bootstrap.py  test_build_sheet_api.py  test_build_sheet_validation.py  test_design_request_api.py  test_fresh_db_startup.py  test_global_exception_handler.py  test_materials_adapters.py  test_npm_collision_detection.py  test_p7_regressions.py  test_persistence.py  test_port_probe.py  test_probe_image_providers.py  test_probe_materials_llms.py  test_projects_api.py  test_providers.py  test_schema.py  test_search_grounding.py  test_settings_api.py  test_url_validator.py
frontend/: .npmrc  index.html  package.json  pnpm-lock.yaml  readBackendPort.ts  tailwind.config.js  tsconfig.json  (+2 more)
(+24 files in other folders)
