[project]
name = "autoscape-backend"
version = "0.1.0"
description = "AutoScape backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
    "beautifulsoup4>=4.12.0",
    "google-genai>=0.8.0",
    "openai>=1.50.0",
    "anthropic>=0.100.0",
    "httpx>=0.27.0",
    "pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
